src/test/ui/issues/10000-19999/issue-14092.rs
fn fn1(0: Box) {}
        //~^ ERROR wrong number of type arguments: expected at least 1, found 0 [E0107]

fn main() {}
